[gd_scene load_steps=13 format=2]

[ext_resource path="res://shaders/color.shader" type="Shader" id=1]
[ext_resource path="res://scripts/objects/Circle.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/audio/89.ogg" type="AudioStream" id=5]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 1 )
shader_param/color = Color( 0.176471, 0.909804, 0.0470588, 1 )

[sub_resource type="StreamTexture" id=6]
flags = 4
load_path = "res://.import/circle_1.png-375bd51565f5d118aee453b97b851245.stex"

[sub_resource type="CircleShape2D" id=2]
radius = 133.319

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteEffect:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "capture"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteEffect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteEffect:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 3, 3 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpriteEffect:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.564706 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "init"
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteEffect:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 4 )

[node name="Circle" type="Area2D" groups=["circles"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
texture = SubResource( 6 )

[node name="SpriteEffect" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
material = SubResource( 1 )
scale = Vector2( 1e-05, 1e-05 )
texture = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Pivot" type="Node2D" parent="."]

[node name="OrbitPosition" type="Node2D" parent="Pivot"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 7 )
anims/capture = SubResource( 3 )
anims/implode = SubResource( 4 )
anims/init = SubResource( 8 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -22.5
margin_top = -39.0
margin_right = 22.5
margin_bottom = 39.0
custom_fonts/font = SubResource( 5 )
text = "1"
align = 1
valign = 1

[node name="Beep" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="MoveTween" type="Tween" parent="."]

[connection signal="tween_completed" from="MoveTween" to="." method="set_tween"]
